// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders level0 1`] = `
<div
  className="Indent-root"
>
  <div
    className=""
  >
    <div>
      Hello World
    </div>
  </div>
</div>
`;

exports[`renders level1 1`] = `
<div
  className="Indent-root"
>
  <div
    className="Indent-level1"
  >
    <div>
      Hello World
    </div>
  </div>
</div>
`;

exports[`renders without border 1`] = `
<div
  className="Indent-root"
>
  <div
    className="Indent-level1 Indent-noBorder"
  >
    <div>
      Hello World
    </div>
  </div>
</div>
`;
